Fixed urls for use with biblatex and biber

--- a/master1.bib
+++ b/master1.bib
@@ -168,7 +168,7 @@
   author = "A. Zezza G. Shaikh and C. {Dos Santos}",
   institution = "Levy Institute",
   year = "2003",
-  note = "\url{http://www.levyinstitute.org/files/download.php?file=pn03_6.pdf\&pubid=548}"
+  note = "http://www.levyinstitute.org/files/download.php?file=pn03_6.pdf\&pubid=548"
 }
 
 @Article{ rudebusch2008macro,
@@ -600,8 +600,9 @@
   title = {The Measurement and Behavior of Uncertainty: Evidence from the {ECB}
           Survey of Professional Forecasters},
   author = {Rich, Robert and Song, Joseph and Tracy, Joseph},
-  journal={SSRN 2192510, \url{http://papers.ssrn.com/sol3/papers.cfm?abstract_id=2192510}},
-  year={2012}
+  journal={SSRN 2192510},
+  year={2012},
+  url={http://papers.ssrn.com/sol3/papers.cfm?abstract\_id=2192510}
 }
 
 @article{rich2010relationships,
@@ -619,7 +620,7 @@
   title={Consensus and Uncertainty in Economic Prediction},
   author={Zarnowitz, Victor and Lambros, Louis A},
   year={1987},
-  journal={National Bureau of Economic Research, \url{http://www.nber.org/papers/w1171}},
+  journal={National Bureau of Economic Research, http://www.nber.org/papers/w1171},
 }
 
 @article{giordani2003inflation,
@@ -737,7 +738,7 @@
   author = {Federal Reserve Bank of St. Louis},
   month = "12",
   year = "2013",
-  howpublished = "\url{http://research.stlouisfed.org/fred2/}"
+  howpublished = "http://research.stlouisfed.org/fred2/"
 }
 
 @Misc{ nber,
@@ -746,7 +747,7 @@
   location = "Cambridge, MA",
   month = "12",
   year = "2013",
-  howpublished = "\url{http://www.nber.org/}"
+  howpublished = "http://www.nber.org/"
 }
 
 
@@ -840,21 +841,21 @@ publisher={Elsevier}
   author = "BLS",
   month = "12",
   year = "2012",
-  howpublished = "\url{http://www.bls.gov/}"
+  howpublished = "http://www.bls.gov/"
 }
 @Misc{ bea,
   title = "Bureau of Economic Analysis: NIPA Tables",
   author = "NIPA",
   month = "10",
   year = "2010",
-  howpublished = "\url{http://www.bea.gov/national/nipaweb/SelectTable.asp}"
+  howpublished = "http://www.bea.gov/national/nipaweb/SelectTable.asp"
 }
 @Misc{ mich,
   title = "Survey of Consumers",
   author = "Thomson Reuters and University of Michigan",
   month = "10",
   year = "2010",
-  howpublished = "\url{http://www.bea.gov/national/nipaweb/SelectTable.asp}"
+  howpublished = "http://www.bea.gov/national/nipaweb/SelectTable.asp"
 }
 @misc{bloomberg,
   title = "Commodity quote: Eurodollar Rate",
@@ -866,32 +867,32 @@ publisher={Elsevier}
 author = {Eric Jones and Travis Oliphant and Pearu Peterson and others},
 title = {{SciPy}: Open source scientific tools for {Python}},
 year ={2001--2014},
-note = "\url{http://www.scipy.org/}"
+note = "http://www.scipy.org/"
 }
 @misc{numpy,
 author = {Travis Oliphant and others},
 title = {{Numpy}: Open source scientific tools for {Python}},
 year ={2005--2014},
-note = "\url{http://www.numpy.org/}"
+note = "http://www.numpy.org/"
 }
 @misc{numpyextend,
 author = {Travis Oliphant and others},
 title = {How to extend NumPy},
 year ={2014},
-note = "\url{http://docs.scipy.org/doc/numpy/user/c-info.how-to-extend.html}"
+note = "http://docs.scipy.org/doc/numpy/user/c-info.how-to-extend.html"
 }
 @misc{pandas,
 author = {Wes McKinney},
 title = {Python Data Analysis Library},
 year ={2005--2014},
-note = "\url{http://pandas.pydata.org/}"
+note = "http://pandas.pydata.org/"
 }
 
 @misc{statsmodels,
 author = {Perktold, J. and Seabold, S. and Mckinney, W.},
 title = {{statsmodels}: Statistics in {Python}},
 year ={2006--2014},
-note = "\url{http://statsmodels.sourceforge.net/}"
+note = "http://statsmodels.sourceforge.net/"
 }
 
 @misc{cython,
@@ -899,7 +900,7 @@ author = {Behnel, S. and Bradshaw, R. and Dalcin, L. and Florisson, M. and
   Makarov, V. and Seljebotn, D.},
 title = {{Cython}: C-Extensions for Python},
 year ={2004},
-note = "\url{http://cython.org/}"
+note = "http://cython.org/"
 }
 
 @misc{matlab,
@@ -1222,7 +1223,7 @@ address = {Natick, Massachusetts}
   month=Nov,
   institution={C.E.P.R. Discussion Papers},
   type={CEPR Discussion Papers},
-  url="\url{http://ideas.repec.org/p/cpr/ceprdp/5341.html}",
+  url="http://ideas.repec.org/p/cpr/ceprdp/5341.html",
   number={5341},
   abstract={The estimation of dynamic no-arbitrage term structure models with a flexible specification of the market price of risk is beset by a severe small-sample problem arising from the highly persistent nature of interest rates. We propose using survey forecasts of a short-term interest rate as an additional input to the estimation to overcome the problem. The three-factor pure-Gaussian model thus estimated with the U.S. Treasury term structure for the 1990-2003 period generates a stable estimate of the expected path of the short rate, reproduces the well-known stylized patterns in the expectations hypothesis tests, and captures some of the short-run variations in the survey forecast of the changes in longer-term interest rates.},
   keywords={Dynamic term structure models; expectations hypothesis; interest rate forecasts; survey data; term p}
@@ -1297,12 +1298,12 @@ address = {Natick, Massachusetts}
 @misc{matlab:uncon,
   author={MATLAB},
   title={Unconstrained Nonlinear Optimization Algorithms},
-  note={\url{http://www.mathworks.com/help/optim/ug/unconstrained-nonlinear-optimization-algorithms.html}}
+  note={http://www.mathworks.com/help/optim/ug/unconstrained-nonlinear-optimization-algorithms.html}
 }
 @misc{rns,
   author={Mike Fletcher},
   title={RunSnake},
-  note={\url{http://www.vrplumber.com/programming/runsnakerun/}}
+  url={http://www.vrplumber.com/programming/runsnakerun/}
 }
 @incollection{stock2003has,
   title={Has the business cycle changed and why?},
@@ -1333,7 +1334,7 @@ address = {Natick, Massachusetts}
 @article{grishchenko2012inflation,
   title={The Inflation Risk Premium: Evidence from the {TIPS} Market},
   author={Grishchenko, Olesya and Huang, Jing-zhi Jay},
-  journal={SSRN 1108401, \url{http://papers.ssrn.com/sol3/papers.cfm?abstract_id=1108401}},
+  journal={SSRN 1108401, http://papers.ssrn.com/sol3/papers.cfm?abstract\_id=1108401},
   year={2012}
 }
 
@@ -1361,7 +1362,7 @@ address = {Natick, Massachusetts}
           Graduate School of Business, The University of Chicago},
   year=2013,
   title={{Fama-Bliss} Discount Bonds - Monthly Only},
-  note={Used with permission. All rights reserved. \url{http://www.vrplumber.com/programming/runsnakerun/}},
+  note={Used with permission. All rights reserved.},
 }
 @incollection{mankiw2004disagreement,
   title={Disagreement about inflation expectations},
@@ -1473,21 +1474,21 @@ address = {Natick, Massachusetts}
   author = {Federal Reserve Bank of Philadelphia},
   month = "12",
   year = "2013",
-  howpublished = "\url{http://www.phil.frb.org/research-and-data/real-time-center/survey-of-professional-forecasters/}"
+  howpublished = "http://www.phil.frb.org/research-and-data/real-time-center/survey-of-professional-forecasters/"
 }
 @Misc{greenbook,
   title = "Greenbook Data Sets",
   author = "{Federal Reserve Bank of Philadelphia}",
   month = "12",
   year = "2013",
-  howpublished = "\url{http://www.phil.frb.org/research-and-data/real-time-center/greenbook-data/}"
+  howpublished = "http://www.phil.frb.org/research-and-data/real-time-center/greenbook-data/"
 }
 @Misc{rtmacro,
   title = "Real-Time Data Set for Macroeconomists",
   author = "{Federal Reserve Bank of Philadelphia}",
   month = "12",
   year = "2013",
-  howpublished = "\url{http://www.phil.frb.org/research-and-data/real-time-center/real-time-data/}"
+  howpublished = "http://www.phil.frb.org/research-and-data/real-time-center/real-time-data/"
 }
 @article{orphanides2012evolving,
   title={Evolving macroeconomic perceptions and the term structure of interest rates},
@@ -1525,7 +1526,7 @@ address = {Natick, Massachusetts}
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
   year = {2012},
-  note = {{ISBN} 3-900051-07-0, \url{http://www.R-project.org/}},
+  note = {{ISBN} 3-900051-07-0, http://www.R-project.org/},
 }
 @PhdThesis{
         dissch1,
@@ -1561,6 +1562,12 @@ address = {Natick, Massachusetts}
         title = {An Extension and Replication of Bernanke, Reinhart, and Sack (2005)},
         author = "B. Baker",
 }
+@unpublished{
+        bakeraffinecomp,
+        title = {An Introduction to \emph{affine}, a Python Solver Class for
+         Affine Models of the Term Structure},
+        author = "B. Baker",
+}
 @Article{PER-GRA:2007,
   Author    = {P\'erez, Fernando and Granger, Brian E.},
   Title     = {{IP}ython: a System for Interactive Scientific Computing},
@@ -1594,14 +1601,14 @@ year={1993},
     author = {Fletcher, Mike},
     title = {{RunSnakeRun}: GUI Viewer for Python profiling runs},
     year ={2001--2013},
-    note = "\url{http://www.vrplumber.com/programming/runsnakerun/}"
+    note = "http://www.vrplumber.com/programming/runsnakerun/"
 }
 @Manual{statacite,
   title = {Stata Statistical Software: Release 13},
   author = {StataCorp},
   address = {College Station, Texas},
   year = {2013},
-  note = {\url{http://www.stata.com/}},
+  note = {http://www.stata.com/},
 }
 @BOOK{laug,
       AUTHOR = {Anderson, E. and Bai, Z. and Bischof, C. and
@@ -1687,12 +1694,12 @@ NOTE   = {\verb+http://www.cs.utsa.edu/~whaley/papers/spercw04.ps+}
 author = {Josef Weidendorfer},
 title = {KCachegrind; Call Graph Viewer},
 year ={2002,2003},
-note = "\url{http://kcachegrind.sourceforge.net/html/Home.html}"
+note = "http://kcachegrind.sourceforge.net/html/Home.html"
 }
 
 @misc{pyprof2,
 author = {Peter Waller},
 title = {pyprof2calltree},
 year ={2013},
-note = "\url{https://pypi.python.org/pypi/pyprof2calltree}"
+note = "https://pypi.python.org/pypi/pyprof2calltree"
 }
