Updated author on my papers and changed all url entries

--- a/master1.bib
+++ b/master1.bib
@@ -168,7 +168,7 @@
   author = "A. Zezza G. Shaikh and C. {Dos Santos}",
   institution = "Levy Institute",
   year = "2003",
-  note = "http://www.levyinstitute.org/files/download.php?file=pn03_6.pdf\&pubid=548"
+  url = {http://www.levyinstitute.org/files/download.php?file=pn03_6.pdf\&pubid=548}
 }
 
 @Article{ rudebusch2008macro,
@@ -867,32 +867,32 @@ publisher={Elsevier}
 author = {Eric Jones and Travis Oliphant and Pearu Peterson and others},
 title = {{SciPy}: Open source scientific tools for {Python}},
 year ={2001--2014},
-note = "http://www.scipy.org/"
+url = {http://www.scipy.org/}
 }
 @misc{numpy,
 author = {Travis Oliphant and others},
 title = {{Numpy}: Open source scientific tools for {Python}},
 year ={2005--2014},
-note = "http://www.numpy.org/"
+url = {http://www.numpy.org/}
 }
 @misc{numpyextend,
 author = {Travis Oliphant and others},
 title = {How to extend NumPy},
 year ={2014},
-note = "http://docs.scipy.org/doc/numpy/user/c-info.how-to-extend.html"
+url = {http://docs.scipy.org/doc/numpy/user/c-info.how-to-extend.html}
 }
 @misc{pandas,
 author = {Wes McKinney},
 title = {Python Data Analysis Library},
 year ={2005--2014},
-note = "http://pandas.pydata.org/"
+url = {http://pandas.pydata.org/}
 }
 
 @misc{statsmodels,
 author = {Perktold, J. and Seabold, S. and Mckinney, W.},
 title = {{statsmodels}: Statistics in {Python}},
 year ={2006--2014},
-note = "http://statsmodels.sourceforge.net/"
+url = {http://statsmodels.sourceforge.net/}
 }
 
 @misc{cython,
@@ -900,7 +900,7 @@ author = {Behnel, S. and Bradshaw, R. and Dalcin, L. and Florisson, M. and
   Makarov, V. and Seljebotn, D.},
 title = {{Cython}: C-Extensions for Python},
 year ={2004},
-note = "http://cython.org/"
+url = {http://cython.org/}
 }
 
 @misc{matlab,
@@ -1298,7 +1298,7 @@ address = {Natick, Massachusetts}
 @misc{matlab:uncon,
   author={MATLAB},
   title={Unconstrained Nonlinear Optimization Algorithms},
-  note={http://www.mathworks.com/help/optim/ug/unconstrained-nonlinear-optimization-algorithms.html}
+  url={http://www.mathworks.com/help/optim/ug/unconstrained-nonlinear-optimization-algorithms.html}
 }
 @misc{rns,
   author={Mike Fletcher},
@@ -1526,7 +1526,8 @@ address = {Natick, Massachusetts}
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
   year = {2012},
-  note = {{ISBN} 3-900051-07-0, http://www.R-project.org/},
+  note = {{ISBN} 3-900051-07-0},
+  url = {http://www.R-project.org/}
 }
 @PhdThesis{
         dissch1,
@@ -1560,13 +1561,20 @@ address = {Natick, Massachusetts}
 @unpublished{
         bakerbsrrepl,
         title = {An Extension and Replication of Bernanke, Reinhart, and Sack (2005)},
-        author = "B. Baker",
+        author = {Barton Baker},
+        year = {2014}
+}
+@unpublished{
+        bakerraffineealtime,
+        title = {A Real-Time Affine Term Structure Model},
+        author = {Barton Baker},
+        year = {2014}
 }
 @unpublished{
         bakeraffinecomp,
-        title = {An Introduction to \emph{affine}, a Python Solver Class for
-         Affine Models of the Term Structure},
-        author = "B. Baker",
+        title = {An Introduction to \emph{affine}, a Python Solver Class for Affine Models of the Term Structure},
+        author = "Barton Baker",
+        year = {2014}
 }
 @Article{PER-GRA:2007,
   Author    = {P\'erez, Fernando and Granger, Brian E.},
@@ -1601,14 +1609,14 @@ year={1993},
     author = {Fletcher, Mike},
     title = {{RunSnakeRun}: GUI Viewer for Python profiling runs},
     year ={2001--2013},
-    note = "http://www.vrplumber.com/programming/runsnakerun/"
+    url = {http://www.vrplumber.com/programming/runsnakerun/}
 }
 @Manual{statacite,
   title = {Stata Statistical Software: Release 13},
   author = {StataCorp},
   address = {College Station, Texas},
   year = {2013},
-  note = {http://www.stata.com/},
+  url = {http://www.stata.com/},
 }
 @BOOK{laug,
       AUTHOR = {Anderson, E. and Bai, Z. and Bischof, C. and
@@ -1632,7 +1640,7 @@ number = "2",
 pages  = "101-121",
 month  = "February",
 YEAR   = "2005",
-NOTE   = {\verb+http://www.cs.utsa.edu/~whaley/papers/spercw04.ps+}
+NOTE   = {http://www.cs.utsa.edu/~whaley/papers/spercw04.ps}
 }
 @article{andrews1994approximately,
   title={Approximately median-unbiased estimation of autoregressive models},
@@ -1694,12 +1702,12 @@ NOTE   = {\verb+http://www.cs.utsa.edu/~whaley/papers/spercw04.ps+}
 author = {Josef Weidendorfer},
 title = {KCachegrind; Call Graph Viewer},
 year ={2002,2003},
-note = "http://kcachegrind.sourceforge.net/html/Home.html"
+url = {http://kcachegrind.sourceforge.net/html/Home.html}
 }
 
 @misc{pyprof2,
 author = {Peter Waller},
 title = {pyprof2calltree},
 year ={2013},
-note = "https://pypi.python.org/pypi/pyprof2calltree"
+url = {https://pypi.python.org/pypi/pyprof2calltree}
 }
