Regime switching entry

--- a/master1.bib
+++ b/master1.bib
@@ -1711,3 +1711,14 @@ title = {pyprof2calltree},
 year ={2013},
 url = {https://pypi.python.org/pypi/pyprof2calltree}
 }
+
+@article{gourieouxetaal2014,
+  title={Regime Switching and Bond Pricing},
+  author={Gourieroux, C. and  Monfort, A. and Pegoraro, F. and Renne, J.-P.},
+  journal={Journal of Financial Economerics},
+  volume={12},
+  number={2},
+  pages={237--277},
+  year={2014},
+  publisher={Oxford University Press}
+}
