added li and wei 2014 entry

--- a/master1.bib
+++ b/master1.bib
@@ -1722,3 +1722,14 @@ url = {https://pypi.python.org/pypi/pyprof2calltree}
   year={2014},
   publisher={Oxford University Press}
 }
+@TechReport{liwei2014,
+  author={Li, Canlin and Wei, Min},
+  title={Term Structure Modeling with Supply Factors and the Federal Reserve's Large Scale Asset Purchase Program},
+  year=2014,
+  institution={Board of Governors of the Federal Reserve System (U.S.)},
+  type={Finance and Economics Discussion Series},
+  url={http://www.federalreserve.gov/pubs/feds/2014/201407/201407abs.html},
+  number={2014-07},
+  abstract={This paper estimates an arbitrage-free term structure model with both observable yield factors and Treasury and Agency MBS supply factors, and uses it to evaluate the term premium effects of the Federal Reserve's large-scale asset purchase programs. Our estimates show that the first and the second large-scale asset purchase programs and the maturity extension program jointly reduced the 10-year Treasury yield by about 100 basis points.},
+  keywords={No-arbitrage term structure models, yield curve, preferred habitat, supply effects, factor models, large-scale asset purchases (LSAP), agency mortgage-backed securities (MBS)}
+}
